--- a/Power_Generation_Optimization.ipynb
+++ b/Power_Generation_Optimization.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Power Generation Optimization.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMtVscFXrFH4T2+1KdhBwvp",
+      "authorship_tag": "ABX9TyNsPblhZaO+R5ln5i77FD50",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,7 +35,7 @@
       },
       "outputs": [],
       "source": [
-        ""
+        "import "
       ]
     }
   ]
