--- a/Power_Generation_Optimization.ipynb
+++ b/Power_Generation_Optimization.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Power Generation Optimization.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMumdFVj6E8CQJCWphAqTgZ",
+      "authorship_tag": "ABX9TyPg6oe/TgjqHIEBrn26tfvk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -84,20 +84,20 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DH9JchxUAIPD",
-        "outputId": "96f6a4e3-4e70-4257-bb53-3d604b726526"
+        "outputId": "fb37ecaf-601c-420a-8b56-2bfc9d727138"
       },
-      "execution_count": 9,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2022-07-03 09:51:01--  https://raw.github.com/farzanehnia/PYOMO/main/inputs.xlsx\n",
-            "Resolving raw.github.com (raw.github.com)... 185.199.110.133, 185.199.109.133, 185.199.111.133, ...\n",
-            "Connecting to raw.github.com (raw.github.com)|185.199.110.133|:443... connected.\n",
+            "--2022-07-03 09:52:00--  https://raw.github.com/farzanehnia/PYOMO/main/inputs.xlsx\n",
+            "Resolving raw.github.com (raw.github.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
+            "Connecting to raw.github.com (raw.github.com)|185.199.108.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 301 Moved Permanently\n",
             "Location: https://raw.githubusercontent.com/farzanehnia/PYOMO/main/inputs.xlsx [following]\n",
-            "--2022-07-03 09:51:02--  https://raw.githubusercontent.com/farzanehnia/PYOMO/main/inputs.xlsx\n",
+            "--2022-07-03 09:52:01--  https://raw.githubusercontent.com/farzanehnia/PYOMO/main/inputs.xlsx\n",
             "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
             "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
@@ -106,9 +106,243 @@
             "\n",
             "/content/inputs.xls 100%[===================>]   9.23K  --.-KB/s    in 0s      \n",
             "\n",
-            "2022-07-03 09:51:02 (76.2 MB/s) - ‘/content/inputs.xlsx’ saved [9455/9455]\n",
+            "2022-07-03 09:52:01 (63.0 MB/s) - ‘/content/inputs.xlsx’ saved [9455/9455]\n",
             "\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import re\n",
+        "dataLoad['Load Demand'] = dataLoad['Load Demand'].astype('str').str.replace('\\D', \"\").astype('float')\n",
+        "dataGen['Power Generation'] = dataGen['Power Generation'].astype('str').str.replace('\\D', \"\").astype('float')\n",
+        "\n",
+        "\n",
+        "dataGen.head()"
+      ],
+      "metadata": {
+        "id": "mV56yQkyfJWa",
+        "outputId": "8bfb26d8-3e95-4fe3-8044-4d2adef3e243",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 276
+        }
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:2: FutureWarning: The default value of regex will change from True to False in a future version.\n",
+            "  \n",
+            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:3: FutureWarning: The default value of regex will change from True to False in a future version.\n",
+            "  This is separate from the ipykernel package so we can avoid doing imports until\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "   id  Cost  Power Generation\n",
+              "0   0  0.10              20.0\n",
+              "1   1  0.05              10.0\n",
+              "2   2  0.30              40.0\n",
+              "3   3  0.40              50.0\n",
+              "4   4  0.01               5.0"
+            ],
+            "text/html": [
+              "\n",
+              "  <div id=\"df-d9ac5820-1fad-4436-bab3-3d027d373574\">\n",
+              "    <div class=\"colab-df-container\">\n",
+              "      <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>id</th>\n",
+              "      <th>Cost</th>\n",
+              "      <th>Power Generation</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>0</td>\n",
+              "      <td>0.10</td>\n",
+              "      <td>20.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>1</td>\n",
+              "      <td>0.05</td>\n",
+              "      <td>10.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>2</td>\n",
+              "      <td>0.30</td>\n",
+              "      <td>40.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>3</td>\n",
+              "      <td>0.40</td>\n",
+              "      <td>50.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>4</td>\n",
+              "      <td>0.01</td>\n",
+              "      <td>5.0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d9ac5820-1fad-4436-bab3-3d027d373574')\"\n",
+              "              title=\"Convert this dataframe to an interactive table.\"\n",
+              "              style=\"display:none;\">\n",
+              "        \n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "       width=\"24px\">\n",
+              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
+              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
+              "  </svg>\n",
+              "      </button>\n",
+              "      \n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      flex-wrap:wrap;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "      <script>\n",
+              "        const buttonEl =\n",
+              "          document.querySelector('#df-d9ac5820-1fad-4436-bab3-3d027d373574 button.colab-df-convert');\n",
+              "        buttonEl.style.display =\n",
+              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "        async function convertToInteractive(key) {\n",
+              "          const element = document.querySelector('#df-d9ac5820-1fad-4436-bab3-3d027d373574');\n",
+              "          const dataTable =\n",
+              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                     [key], {});\n",
+              "          if (!dataTable) return;\n",
+              "\n",
+              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "            + ' to learn more about interactive tables.';\n",
+              "          element.innerHTML = '';\n",
+              "          dataTable['output_type'] = 'display_data';\n",
+              "          await google.colab.output.renderOutput(dataTable, element);\n",
+              "          const docLink = document.createElement('div');\n",
+              "          docLink.innerHTML = docLinkHtml;\n",
+              "          element.appendChild(docLink);\n",
+              "        }\n",
+              "      </script>\n",
+              "    </div>\n",
+              "  </div>\n",
+              "  "
+            ]
+          },
+          "metadata": {},
+          "execution_count": 16
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#model\n",
+        "\n",
+        "model = pyo.ConcreteModel()\n",
+        "\n",
+        "model.Pg = pyo.Var(range(Ng), bounds=(0, None))\n",
+        "Pg = model.Pg\n",
+        "\n",
+        "#constraints\n",
+        "Pg_sum = sum([Pg[g] for g in dataGen.id])\n",
+        "demand_sum = dataLoad['Load Demand'].sum()\n",
+        "\n",
+        "\n",
+        "model.balance = pyo.Constraint(expr = Pg_sum == demand_sum)\n"
+      ],
+      "metadata": {
+        "id": "OhN20nD6bbx3"
+      },
+      "execution_count": 19,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "O5S6QwgQgcFz",
+        "outputId": "1c443578-545a-43a1-a815-bd9e130c5ae2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<bound method Component.pprint of <pyomo.core.base.PyomoModel.ConcreteModel object at 0x7f7bbc25a410>>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 21
         }
       ]
     },
@@ -118,7 +352,7 @@
         ""
       ],
       "metadata": {
-        "id": "OhN20nD6bbx3"
+        "id": "hCFF-pEFgl3Q"
       },
       "execution_count": null,
       "outputs": []
