--- a/Power_Generation_Optimization.ipynb
+++ b/Power_Generation_Optimization.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Power Generation Optimization.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNZa7tyTisSRQj6lbODOB6N",
+      "authorship_tag": "ABX9TyMlaPLsmQATwfBEEX/mOVUt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -231,11 +231,11 @@
         "!pip install glpk"
       ],
       "metadata": {
-        "id": "04Vl8M1IvoOO",
-        "outputId": "831fecda-f964-4b08-998f-42e785bf4589",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "04Vl8M1IvoOO",
+        "outputId": "831fecda-f964-4b08-998f-42e785bf4589"
       },
       "execution_count": 45,
       "outputs": [
@@ -325,14 +325,14 @@
         "dataGen.head()"
       ],
       "metadata": {
-        "id": "FvDrJiO7wJBl",
-        "outputId": "2c5dd276-82c5-48db-992c-676765d83a7a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
-        }
+        },
+        "id": "FvDrJiO7wJBl",
+        "outputId": "a0abbdd0-aee3-4504-8d49-b6ad6980eca5"
       },
-      "execution_count": 53,
+      "execution_count": 56,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -347,7 +347,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-126999ef-8c94-4075-b96f-b4f83ea87d0c\">\n",
+              "  <div id=\"df-e5de6ba6-ff08-4ee7-a9e5-fa7dbdf8fb99\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -412,7 +412,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-126999ef-8c94-4075-b96f-b4f83ea87d0c')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-e5de6ba6-ff08-4ee7-a9e5-fa7dbdf8fb99')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -463,12 +463,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-126999ef-8c94-4075-b96f-b4f83ea87d0c button.colab-df-convert');\n",
+              "          document.querySelector('#df-e5de6ba6-ff08-4ee7-a9e5-fa7dbdf8fb99 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-126999ef-8c94-4075-b96f-b4f83ea87d0c');\n",
+              "          const element = document.querySelector('#df-e5de6ba6-ff08-4ee7-a9e5-fa7dbdf8fb99');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -491,7 +491,61 @@
             ]
           },
           "metadata": {},
-          "execution_count": 53
+          "execution_count": 56
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.Pg.pprint()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "87V84bFSwbP9",
+        "outputId": "2c52a697-841c-4fc9-af9b-7d6536f53ede"
+      },
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Pg : Size=5, Index=Pg_index\n",
+            "    Key : Lower : Value : Upper : Fixed : Stale : Domain\n",
+            "      0 :     0 :  20.0 :  None : False : False :  Reals\n",
+            "      1 :     0 :  10.0 :  None : False : False :  Reals\n",
+            "      2 :     0 :  35.0 :  None : False : False :  Reals\n",
+            "      3 :     0 :  30.0 :  None : False : False :  Reals\n",
+            "      4 :     0 :   5.0 :  None : False : False :  Reals\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.cond.pprint()"
+      ],
+      "metadata": {
+        "id": "LwDywEn_xcbt",
+        "outputId": "dd45e2a4-fc81-4edb-9616-0f130fcd7087",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 60,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "cond : Size=1, Index=None, Active=True\n",
+            "    Key  : Lower : Body          : Upper : Active\n",
+            "    None :  50.0 : Pg[0] + Pg[3] :  +Inf :   True\n"
+          ]
         }
       ]
     },
@@ -501,7 +555,7 @@
         ""
       ],
       "metadata": {
-        "id": "87V84bFSwbP9"
+        "id": "zICT3hKmxsWF"
       },
       "execution_count": null,
       "outputs": []
