--- a/Power_Generation_Optimization.ipynb
+++ b/Power_Generation_Optimization.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Power Generation Optimization.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMlaPLsmQATwfBEEX/mOVUt",
+      "authorship_tag": "ABX9TyMaf2GCeDM4Wf3qpeLpR6eT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 18,
       "metadata": {
         "id": "9-99IgC1-XZp"
       },
@@ -49,7 +49,7 @@
       "metadata": {
         "id": "pTxfhnXp_lxU"
       },
-      "execution_count": 3,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -74,21 +74,21 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DH9JchxUAIPD",
-        "outputId": "6318e10e-1b27-454c-d39e-f12b63291fb7"
+        "outputId": "c19d8116-7ed4-4060-ba5d-c940fa849e64"
       },
-      "execution_count": 26,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2022-07-03 10:54:14--  https://raw.github.com/farzanehnia/PYOMO/main/inputs.xlsx\n",
-            "Resolving raw.github.com (raw.github.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
-            "Connecting to raw.github.com (raw.github.com)|185.199.108.133|:443... connected.\n",
+            "--2022-07-03 17:53:48--  https://raw.github.com/farzanehnia/PYOMO/main/inputs.xlsx\n",
+            "Resolving raw.github.com (raw.github.com)... 185.199.109.133, 185.199.108.133, 185.199.110.133, ...\n",
+            "Connecting to raw.github.com (raw.github.com)|185.199.109.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 301 Moved Permanently\n",
             "Location: https://raw.githubusercontent.com/farzanehnia/PYOMO/main/inputs.xlsx [following]\n",
-            "--2022-07-03 10:54:14--  https://raw.githubusercontent.com/farzanehnia/PYOMO/main/inputs.xlsx\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
+            "--2022-07-03 17:53:48--  https://raw.githubusercontent.com/farzanehnia/PYOMO/main/inputs.xlsx\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.111.133, 185.199.110.133, ...\n",
             "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 9455 (9.2K) [application/octet-stream]\n",
@@ -96,7 +96,7 @@
             "\n",
             "/content/inputs.xls 100%[===================>]   9.23K  --.-KB/s    in 0s      \n",
             "\n",
-            "2022-07-03 10:54:15 (59.9 MB/s) - ‘/content/inputs.xlsx’ saved [9455/9455]\n",
+            "2022-07-03 17:53:48 (74.0 MB/s) - ‘/content/inputs.xlsx’ saved [9455/9455]\n",
             "\n"
           ]
         },
@@ -124,9 +124,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mV56yQkyfJWa",
-        "outputId": "a07a478c-0caf-4632-ceb3-4be2c5934433"
+        "outputId": "318f9486-6ea4-4f1e-d1ee-16f176224a37"
       },
-      "execution_count": 28,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -136,7 +136,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 28
+          "execution_count": 21
         }
       ]
     },
@@ -150,6 +150,43 @@
         "model.Pg = pyo.Var(range(Ng), bounds=(0, None))\n",
         "Pg = model.Pg\n",
         "\n",
+        "model.pprint()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "OhN20nD6bbx3",
+        "outputId": "ba762098-a3bf-4ade-c5e9-b610ac98b8a8"
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1 Set Declarations\n",
+            "    Pg_index : Size=1, Index=None, Ordered=Insertion\n",
+            "        Key  : Dimen : Domain : Size : Members\n",
+            "        None :     1 :    Any :    5 : {0, 1, 2, 3, 4}\n",
+            "\n",
+            "1 Var Declarations\n",
+            "    Pg : Size=5, Index=Pg_index\n",
+            "        Key : Lower : Value : Upper : Fixed : Stale : Domain\n",
+            "          0 :     0 :  None :  None : False :  True :  Reals\n",
+            "          1 :     0 :  None :  None : False :  True :  Reals\n",
+            "          2 :     0 :  None :  None : False :  True :  Reals\n",
+            "          3 :     0 :  None :  None : False :  True :  Reals\n",
+            "          4 :     0 :  None :  None : False :  True :  Reals\n",
+            "\n",
+            "2 Declarations: Pg_index Pg\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#constraints\n",
         "Pg_sum = sum([Pg[g] for g in dataGen.id])\n",
         "demand_sum = dataLoad['Load Demand'].sum()\n",
@@ -164,9 +201,9 @@
         "  model.limits.add(expr = Pg[g] <= dataGen['Power Generation'].iloc[g])"
       ],
       "metadata": {
-        "id": "OhN20nD6bbx3"
+        "id": "bKwzK8hd9cFW"
       },
-      "execution_count": 31,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -177,26 +214,10 @@
         "model.obj = pyo.Objective(expr = sum([Pg[g]*dataGen.Cost[g] for g in dataGen.id]))\n"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "O5S6QwgQgcFz",
-        "outputId": "5426ab02-8114-409b-a354-0144be64330b"
+        "id": "O5S6QwgQgcFz"
       },
-      "execution_count": 42,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "WARNING: Implicitly replacing the Component attribute obj (type=<class\n",
-            "    'pyomo.core.base.objective.ScalarObjective'>) on block unknown with a new\n",
-            "    Component (type=<class 'pyomo.core.base.objective.ScalarObjective'>). This\n",
-            "    is usually indicative of a modelling error. To avoid this warning, use\n",
-            "    block.del_component() and block.add_component().\n"
-          ]
-        }
-      ]
+      "execution_count": 24,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -210,9 +231,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hCFF-pEFgl3Q",
-        "outputId": "59c50bf5-fb94-4fed-aa9b-1dade447a9eb"
+        "outputId": "85f349d0-9e59-48c2-f037-233df74babbd"
       },
-      "execution_count": 43,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
@@ -228,16 +249,16 @@
       "cell_type": "code",
       "source": [
         "!apt install glpk-utils\n",
-        "!pip install glpk"
+        "!pip install glpk\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "04Vl8M1IvoOO",
-        "outputId": "831fecda-f964-4b08-998f-42e785bf4589"
+        "outputId": "950e411e-22ee-48f6-bc0f-d9e10fd65b76"
       },
-      "execution_count": 45,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
@@ -246,54 +267,15 @@
             "Reading package lists... Done\n",
             "Building dependency tree       \n",
             "Reading state information... Done\n",
+            "glpk-utils is already the newest version (4.65-1).\n",
             "The following package was automatically installed and is no longer required:\n",
             "  libnvidia-common-460\n",
             "Use 'apt autoremove' to remove it.\n",
-            "The following additional packages will be installed:\n",
-            "  libamd2 libcolamd2 libglpk40 libsuitesparseconfig5\n",
-            "Suggested packages:\n",
-            "  libiodbc2-dev\n",
-            "The following NEW packages will be installed:\n",
-            "  glpk-utils libamd2 libcolamd2 libglpk40 libsuitesparseconfig5\n",
-            "0 upgraded, 5 newly installed, 0 to remove and 49 not upgraded.\n",
-            "Need to get 692 kB of archives.\n",
-            "After this operation, 1,664 kB of additional disk space will be used.\n",
-            "Get:1 http://archive.ubuntu.com/ubuntu bionic/main amd64 libsuitesparseconfig5 amd64 1:5.1.2-2 [9,044 B]\n",
-            "Get:2 http://archive.ubuntu.com/ubuntu bionic/main amd64 libamd2 amd64 1:5.1.2-2 [19.5 kB]\n",
-            "Get:3 http://archive.ubuntu.com/ubuntu bionic/main amd64 libcolamd2 amd64 1:5.1.2-2 [16.2 kB]\n",
-            "Get:4 http://archive.ubuntu.com/ubuntu bionic/universe amd64 libglpk40 amd64 4.65-1 [378 kB]\n",
-            "Get:5 http://archive.ubuntu.com/ubuntu bionic/universe amd64 glpk-utils amd64 4.65-1 [269 kB]\n",
-            "Fetched 692 kB in 0s (7,088 kB/s)\n",
-            "Selecting previously unselected package libsuitesparseconfig5:amd64.\n",
-            "(Reading database ... 155639 files and directories currently installed.)\n",
-            "Preparing to unpack .../libsuitesparseconfig5_1%3a5.1.2-2_amd64.deb ...\n",
-            "Unpacking libsuitesparseconfig5:amd64 (1:5.1.2-2) ...\n",
-            "Selecting previously unselected package libamd2:amd64.\n",
-            "Preparing to unpack .../libamd2_1%3a5.1.2-2_amd64.deb ...\n",
-            "Unpacking libamd2:amd64 (1:5.1.2-2) ...\n",
-            "Selecting previously unselected package libcolamd2:amd64.\n",
-            "Preparing to unpack .../libcolamd2_1%3a5.1.2-2_amd64.deb ...\n",
-            "Unpacking libcolamd2:amd64 (1:5.1.2-2) ...\n",
-            "Selecting previously unselected package libglpk40:amd64.\n",
-            "Preparing to unpack .../libglpk40_4.65-1_amd64.deb ...\n",
-            "Unpacking libglpk40:amd64 (4.65-1) ...\n",
-            "Selecting previously unselected package glpk-utils.\n",
-            "Preparing to unpack .../glpk-utils_4.65-1_amd64.deb ...\n",
-            "Unpacking glpk-utils (4.65-1) ...\n",
-            "Setting up libsuitesparseconfig5:amd64 (1:5.1.2-2) ...\n",
-            "Setting up libcolamd2:amd64 (1:5.1.2-2) ...\n",
-            "Setting up libamd2:amd64 (1:5.1.2-2) ...\n",
-            "Setting up libglpk40:amd64 (4.65-1) ...\n",
-            "Setting up glpk-utils (4.65-1) ...\n",
-            "Processing triggers for libc-bin (2.27-3ubuntu1.3) ...\n",
-            "/sbin/ldconfig.real: /usr/local/lib/python3.7/dist-packages/ideep4py/lib/libmkldnn.so.0 is not a symbolic link\n",
-            "\n",
-            "Processing triggers for man-db (2.8.3-2ubuntu0.1) ...\n",
+            "0 upgraded, 0 newly installed, 0 to remove and 49 not upgraded.\n",
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Collecting glpk\n",
-            "  Downloading glpk-0.4.6.tar.gz (153 kB)\n",
-            "\u001b[K     |████████████████████████████████| 153 kB 13.7 MB/s \n",
-            "\u001b[?25h  Installing build dependencies ... \u001b[?25l\u001b[?25hdone\n",
+            "  Using cached glpk-0.4.6.tar.gz (153 kB)\n",
+            "  Installing build dependencies ... \u001b[?25l\u001b[?25hdone\n",
             "  Getting requirements to build wheel ... \u001b[?25l\u001b[?25hdone\n",
             "    Preparing wheel metadata ... \u001b[?25l\u001b[?25hdone\n",
             "Building wheels for collected packages: glpk\n",
@@ -314,7 +296,7 @@
       "metadata": {
         "id": "SZ3TCWXwwDBo"
       },
-      "execution_count": 55,
+      "execution_count": 27,
       "outputs": []
     },
     {
@@ -330,9 +312,9 @@
           "height": 206
         },
         "id": "FvDrJiO7wJBl",
-        "outputId": "a0abbdd0-aee3-4504-8d49-b6ad6980eca5"
+        "outputId": "99a4227e-cbac-41f3-eb1a-b8faea003abf"
       },
-      "execution_count": 56,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -347,7 +329,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-e5de6ba6-ff08-4ee7-a9e5-fa7dbdf8fb99\">\n",
+              "  <div id=\"df-9c925d68-e27c-4439-b7ec-7d42c53249de\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -412,7 +394,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-e5de6ba6-ff08-4ee7-a9e5-fa7dbdf8fb99')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-9c925d68-e27c-4439-b7ec-7d42c53249de')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -463,12 +445,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-e5de6ba6-ff08-4ee7-a9e5-fa7dbdf8fb99 button.colab-df-convert');\n",
+              "          document.querySelector('#df-9c925d68-e27c-4439-b7ec-7d42c53249de button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-e5de6ba6-ff08-4ee7-a9e5-fa7dbdf8fb99');\n",
+              "          const element = document.querySelector('#df-9c925d68-e27c-4439-b7ec-7d42c53249de');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -491,7 +473,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 56
+          "execution_count": 28
         }
       ]
     },
@@ -505,9 +487,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "87V84bFSwbP9",
-        "outputId": "2c52a697-841c-4fc9-af9b-7d6536f53ede"
+        "outputId": "a745da6d-8e78-412a-8584-1299c20995d6"
       },
-      "execution_count": 58,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
@@ -530,13 +512,13 @@
         "model.cond.pprint()"
       ],
       "metadata": {
-        "id": "LwDywEn_xcbt",
-        "outputId": "dd45e2a4-fc81-4edb-9616-0f130fcd7087",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "LwDywEn_xcbt",
+        "outputId": "d2bd2ff1-5e4f-4ea0-c52a-b4573125fdd6"
       },
-      "execution_count": 60,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "stream",
@@ -557,7 +539,7 @@
       "metadata": {
         "id": "zICT3hKmxsWF"
       },
-      "execution_count": null,
+      "execution_count": 30,
       "outputs": []
     }
   ]
