--- a/MILP_example.ipynb
+++ b/MILP_example.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "MILP example.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOto/7tZMoRYk5CFvttrPYC",
+      "authorship_tag": "ABX9TyPSrl5kyP6rRXvCDBevbden",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -26,6 +26,21 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/farzanehnia/PYOMO/blob/main/MILP_example.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Install pyomo\n",
+        "\n",
+        "Here is an example of MILP mixed integer linear programming\n",
+        "Solvers include: ['gurobi', 'cplex', 'cbc', 'glpk', 'gams', 'gurobi_persistent', 'cplex_persistent'] for linear programming\n",
+        "GLOP is a google software used in or-tools not PYOMO.\n",
+        "\n",
+        "mixed-integer nonlinear programming problems (MINLP), ipopt(NLP)"
+      ],
+      "metadata": {
+        "id": "UX-HECr3RZJV"
+      }
     },
     {
       "cell_type": "code",
@@ -49,9 +64,19 @@
         }
       ],
       "source": [
-        "#LINEAR---> ['gurobi', 'cplex', 'cbc', 'glpk', 'gams', 'gurobi_persistent', 'cplex_persistent'] Glop --> from google, couenne -->mixed-integer nonlinear programming problems (MINLP), ipopt(NLP)\n",
         "!pip install -q pyomo"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "XuVw_2LeRXsv"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
