--- a/MINLP.ipynb
+++ b/MINLP.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "MINLP.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMd/TjCa2K81k5L5P6hd+T9",
+      "authorship_tag": "ABX9TyPtSSsyy1Bm6eWTa9kAgBC7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -77,10 +77,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "This would solve it with the couenne solver. opt = SolverFactory('mindtpy')\n",
-        "opt.solve(model, mip_solver= 'gurobi', nlp_solver='ipopt')\n",
-        "\n",
-        "so we define mindtpy as the solver"
+        "This would solve it with the couenne solver which is for non-linear problems."
       ],
       "metadata": {
         "id": "1WtFOiY-gLcJ"
@@ -108,12 +105,12 @@
       ],
       "metadata": {
         "id": "E9xvKfcSfm3q",
-        "outputId": "2c68d7a8-26d4-4b42-fcc3-3061c2544797",
+        "outputId": "fbd2685f-fdc5-4417-ad68-967364729382",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -148,12 +145,12 @@
       ],
       "metadata": {
         "id": "fZFjUg2Sf6ED",
-        "outputId": "6384aae9-e2c9-4426-b9d6-cd925ca21445",
+        "outputId": "3ed3d003-dc15-4ed3-9393-105cb65f5c4a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -172,8 +169,20 @@
       "metadata": {
         "id": "8DnjWD2igpmK"
       },
-      "execution_count": 6,
+      "execution_count": 5,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        " opt = SolverFactory('mindtpy')\n",
+        "opt.solve(model, mip_solver= 'gurobi', nlp_solver='ipopt')\n",
+        "\n",
+        "so we define mindtpy as the solver"
+      ],
+      "metadata": {
+        "id": "S53wP5Z6Vomv"
+      }
     },
     {
       "cell_type": "code",
@@ -198,22 +207,17 @@
       ],
       "metadata": {
         "id": "ilMEfogdgsTg",
-        "outputId": "2598b944-7a37-4a9a-b8ee-03f1b03a7b2c",
+        "outputId": "af2f5b98-c054-461a-f3ca-bdaf69643fd1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "WARNING: Implicitly replacing the Component attribute obj (type=<class\n",
-            "    'pyomo.core.base.objective.ScalarObjective'>) on block unknown with a new\n",
-            "    Component (type=<class 'pyomo.core.base.objective.ScalarObjective'>). This\n",
-            "    is usually indicative of a modelling error. To avoid this warning, use\n",
-            "    block.del_component() and block.add_component().\n",
             "2 Var Declarations\n",
             "    x : Size=1, Index=None\n",
             "        Key  : Lower : Value : Upper : Fixed : Stale : Domain\n",
@@ -255,7 +259,7 @@
       "metadata": {
         "id": "jxyX7IYjhK3-"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     }
   ]
