--- a/MINLP.ipynb
+++ b/MINLP.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "MINLP.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPtSSsyy1Bm6eWTa9kAgBC7",
+      "authorship_tag": "ABX9TyPBYwsDAS2nFUS+SeHV8K3X",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -77,7 +77,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "This would solve it with the couenne solver which is for non-linear problems."
+        "This would solve it with the couenne solver which is for non-linear mixed integer problems.\n",
+        "\n",
+        "To solve using couenne we have to add the executable in the solver using opt = SolverFactory('couenne', executable= '/content/couenne')\n",
+        "Or we can add the executable to the environment variable.\n"
       ],
       "metadata": {
         "id": "1WtFOiY-gLcJ"
@@ -127,8 +130,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "We can also #**mindtpy** to choose 2 solvers for linear and non-linear separately. Because we cannot specify the executeable file we need to add it to the path by using one of the methods !ls 'path'\n",
-        "or sys.path.append('path')"
+        "We can also **mindtpy** to choose 2 solvers for linear and non-linear separately.\n",
+        "\n",
+        "Because we cannot specify the executeable file we need to add it to the path by using one of the methods !ls 'path'\n",
+        "or sys.path.append('path') for colab."
       ],
       "metadata": {
         "id": "7IVZC-VygT2A"
